# routes/roomRoutes.js
@@ -14,6 +14,48 @@ import roleMiddleware from "../middlewares/roleMiddleware.js";
  * @desc Get all rooms
  * @access Private
  */
+
+
+/**
+ *  @swagger
+ * /api/v1/room/:
+ *   post:
+ *     summary: Get Room
+ *     tags: [Room]
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             properties:
+ *               email:
+ *                 type: string
+ *                 format: email
+ *                 description: User's email address
+ *               password:
+ *                 type: string
+ *                 format: password
+ *                 description: User's password (at least 6 characters)
+ *     responses:
+ *       200:
+ *         description: Successful login
+ *         content:
+ *           application/json:
+ *             example:
+ *               token: <JWT_TOKEN>
+ *       400:
+ *         description: Bad request (validation errors)
+ *             
+ *       409:
+ *         description:  Bad request ( user not exists)
+ *         
+ *       500:
+ *         description: Internal server error
+ */
+
+
+
 roomRouter.get("/", instituteMiddleware, roomController.get_rooms);
 
 /**
@@ -21,12 +63,96 @@ roomRouter.get("/", instituteMiddleware, roomController.get_rooms);
  * @desc Create room for institute
  * @access Private
  */
+
+/**
+ *  @swagger
+ * /api/v1/room/:
+ *   post:
+ *     summary: Enter Room Name
+ *     tags: [Room]
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             properties:
+ *               email:
+ *                 type: string
+ *                 format: email
+ *                 description: User's email address
+ *               password:
+ *                 type: string
+ *                 format: password
+ *                 description: User's password (at least 6 characters)
+ *     responses:
+ *       200:
+ *         description: Successful login
+ *         content:
+ *           application/json:
+ *             example:
+ *               token: <JWT_TOKEN>
+ *       400:
+ *         description: Bad request (validation errors)
+ *             
+ *       409:
+ *         description:  Bad request ( user not exists)
+ *         
+ *       500:
+ *         description: Internal server error
+ */
+
+
+
 roomRouter.post(
   "/",
   instituteMiddleware,
   [check("name", "Please enter a room name").not().isEmpty()],
   roomController.create_room
 );
+
+
+
+/**
+ *  @swagger
+ * /api/v1/room/:room_id/students:
+ *   post:
+ *     summary: Create Student
+ *     tags: [Institute]
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             properties:
+ *               email:
+ *                 type: string
+ *                 format: email
+ *                 description: User's email address
+ *               password:
+ *                 type: string
+ *                 format: password
+ *                 description: User's password (at least 6 characters)
+ *     responses:
+ *       200:
+ *         description: Successful login
+ *         content:
+ *           application/json:
+ *             example:
+ *               token: <JWT_TOKEN>
+ *       400:
+ *         description: Bad request (validation errors)
+ *             
+ *       409:
+ *         description:  Bad request ( user not exists)
+ *         
+ *       500:
+ *         description: Internal server error
+ */
+
+
+
 
 roomRouter.post(
   '/:room_id/students',
